[gd_scene load_steps=4 format=3 uid="uid://b71pjfgb3w61k"]

[ext_resource type="PackedScene" uid="uid://cotwrns28n00w" path="res://gui_manager/dialogs_templates/base_dialog.tscn" id="1_jehuf"]
[ext_resource type="Script" uid="uid://xwsqq8g2ye1y" path="res://gui_manager/dialogs/done_dialog.gd" id="2_kafra"]
[ext_resource type="Texture2D" uid="uid://bnirrquimvfbu" path="res://assets/dialogs/done_dialog.png" id="2_smqfw"]

[node name="DoneDialog" instance=ExtResource("1_jehuf")]
script = ExtResource("2_kafra")

[node name="Dialog" parent="." index="1"]
texture = ExtResource("2_smqfw")

[node name="CancelButton" type="Button" parent="." index="3"]
modulate = Color(1, 1, 1, 0)
offset_left = 560.0
offset_top = 631.0
offset_right = 959.0
offset_bottom = 719.0

[node name="OkButton" type="Button" parent="." index="4"]
modulate = Color(1, 1, 1, 0)
offset_left = 962.0
offset_top = 631.0
offset_right = 1361.0
offset_bottom = 719.0
